Make sure menu hides after click on mobile

--- a/bluebottle/bluebottle_dashboard/static/jet/css/_sidebar.scss
+++ b/bluebottle/bluebottle_dashboard/static/jet/css/_sidebar.scss
@@ -128,12 +128,9 @@
   }
 
   &-close {
-    display: none;
     float: right;
     padding: 4px;
-    margin: 12px 18px 0 12px;
-    background-color: $sidebar-popup-search-input-background-color;
-    border-radius: 5px;
+    margin: 12px 12px 0 12px;
 
     @include for-mobile {
       display: inline-block;
@@ -141,7 +138,7 @@
 
     &-icon {
       color: $sidebar-popup-search-input-text-color;
-      font-size: 28px;
+      font-size: 18px;
       vertical-align: middle;
     }
   }
@@ -437,6 +434,7 @@
     top: 410px;
 
     @include for-mobile {
+      top: 360px;
       width: 200px;
       body.menu-pinned & {
         left: 200px;
